--- a/src/2-form.html
+++ b/src/2-form.html
@@ -15,7 +15,7 @@
         <form class="feedback-form" autocomplete="off">
           <label>
             Email
-            <input type="email" name="email" autofocus />
+            <input class="email" type="email" name="email" autofocus />
           </label>
           <label>
             Message
